tests/ui/fail/bits_param/invalid_param_value_2.stderr
error: encountered malformatted integer value for `bits` parameter: invalid digit found in string
 --> tests/ui/fail/bits_param/invalid_param_value_2.rs:3:19
  |
3 | #[bitfield(bits = -1)]
  |                   ^
